# VLUT

./: .gitignore  README.md  install.sh  pyproject.toml  start.sh
docs/: USAGE.ja.md  USAGE.zh.md
gmid/: char_mos.py  cli.py  config.py  designer.py  i18n.py  lut.py  netlist.py  passives.py  pdk.py  pdkscan.py  psf.py  topologies.py  verify.py
gmid/qtgui/: common.py  main.py  pdk_dialog.py  tab_char.py  tab_curves.py  tab_netlist.py  tab_passives.py  tab_query.py  tab_topo.py
pdks/: example.yaml.template
virtuoso/: README.md  install_plugin.sh  vlut_ade.il
vlut.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
