[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "vlut"
version = "0.1.0"
description = "gm/id LUT-based analog design tool driven by local Cadence Spectre"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "PyQt5",
    "PyYAML",
]

[project.scripts]
vlut = "gmid.qtgui.main:main"
vlut-cli = "gmid.cli:main"

[tool.setuptools]
packages = ["gmid", "gmid.qtgui"]
